	* Allow changing ownership of torrents
	* Host entries in the Connection Manager UI are now editable. They're
	now also migrated from the old format were automatic localhost logins were
	possible, which no longer is, this fixes #1814.
	* Implemented sequential downloads UI handling.
	* #378: Allow showing a pieces bar instead of a regular progress bar in a
	torrent's status tab.

==== Blocklist Plugin ====
	* #1382: Implemented whitelist support to both core and GTK UI.
	* Implemented ip filter cleaning before each update. Restarting the deluge
	daemon is no longer needed.
	* If "check_after_days" is 0(zero), the timer is not started anymore. It
	would keep updating one call after the other. If the value changed, the
	timer is now stopped and restarted using the new value.

=== Deluge 1.3.6 (In Development) ===
==== Core ====
	* Catch & log KeyError when removing a torrent from the queued torrents set
	* Fix moving/renaming torrents with non-ascii characters in libtorrent 0.16
	* Make sure queue order is preserved when restarting
	* #2160: Disable use of python bindings for libtorrent extensions and replace with session flag
	* #2163: Fix unable add torrent file with empty (0:) encoding tag
	* #2201: Fix error in authmanager if auth file has extra newlines
	* #2109: Fix the Proxy settings not being cleared by setting None
	* #2110: Fix accepting magnet uris with xt param anywhere within them
	* #2204: Fix daemon shutdown hang

==== GtkUI ====
	* Add move completed option to add torrent dialog
	* Prevent jitter in torrent view
	* Fix torrent creation with non-ascii characters
	* Fix #2100 : Add option not to bring main window to front when adding torrents through ipcinterface
	* Add Quit Dialog when toggling classic mode in preferences and only show connection manager when not in classic mode.
	* #2169: Fix 'Download Location' in the Add Torrent Dialog not set correctly when folder typed into Other->Location field