@@ -60,7 +60,7 @@ log = logging.getLogger(__name__)
 class IPCProtocolServer(Protocol):
     def dataReceived(self, data):
         config = ConfigManager("gtkui.conf")
-        data = rencode.loads(data)
+        data = rencode.loads(data, decode_utf8=True)
         if not data or config["focus_main_window_on_add"]:
             component.get("MainWindow").present()
         process_args(data)
