@@ -64,6 +64,35 @@ if 'dev' not in deluge.common.get_version():
     import warnings
     warnings.filterwarnings('ignore', category=DeprecationWarning, module='twisted')
 
+def win32_unicode_argv():
+    """Uses shell32.GetCommandLineArgvW to get sys.argv as a list of Unicode
+    strings.
+
+    Versions 2.x of Python don't support Unicode in sys.argv on
+    Windows, with the underlying Windows API instead replacing multi-byte
+    characters with '?'.
+    """
+
+    from ctypes import POINTER, byref, cdll, c_int, windll
+    from ctypes.wintypes import LPCWSTR, LPWSTR
+
+    GetCommandLineW = cdll.kernel32.GetCommandLineW
+    GetCommandLineW.argtypes = []
+    GetCommandLineW.restype = LPCWSTR
+
+    CommandLineToArgvW = windll.shell32.CommandLineToArgvW
+    CommandLineToArgvW.argtypes = [LPCWSTR, POINTER(c_int)]
+    CommandLineToArgvW.restype = POINTER(LPWSTR)
+
+    cmd = GetCommandLineW()
+    argc = c_int(0)
+    argv = CommandLineToArgvW(cmd, byref(argc))
+    if argc.value > 0:
+        # Remove Python executable and commands if present
+        start = argc.value - len(sys.argv)
+        return [argv[i] for i in
+                xrange(start, argc.value)]
+
 class _UI(object):
 
     def __init__(self, name="gtk"):
@@ -107,7 +136,12 @@ class _UI(object):
         return self.__args
 
     def start(self):
-        (self.__options, self.__args) = self.__parser.parse_args()
+        # Make sure all arguments are unicode
+        if deluge.common.windows_check():
+            argv = win32_unicode_argv()[1:]
+        else:
+            argv = [arg.decode(sys.stdin.encoding) for arg in sys.argv[1:]]
+        (self.__options, self.__args) = self.__parser.parse_args(argv)
 
         if self.__options.quiet:
             self.__options.loglevel = "none"
