@@ -32,6 +32,7 @@
 	* Implemented sequential downloads UI handling.
 	* #378: Allow showing a pieces bar instead of a regular progress bar in a
 	torrent's status tab.
+	* #2093: Make torrent opening compatible with all unicode paths.
 
 ==== Blocklist Plugin ====
 	* #1382: Implemented whitelist support to both core and GTK UI.
